zokrates_cli/examples/compile_errors/generics/concrete_length_mismatch.zok
def main() {
    assert([1] == [1, 2]);
    return;
}
